# Molecule-Visualizer

./: CMakeLists.txt  README.md
resources/: AtomicData.txt  AtomicDataNew.xml  AtomicDataOld.xml
resources/shaders/: 2DFragmentShader.glsl  2DVertexShader.glsl  FragmentShader.glsl  TextFragmentShader.glsl  TextVertexShader.glsl  VertexShader.glsl
src/: Atom.cpp  Atom.h  Camera.cpp  Camera.h  Connection.cpp  Connection.h  Drawable.cpp  Drawable.h  Driver.cpp  Molecule.cpp  Molecule.h  PeriodicTable.cpp  PeriodicTable.h  Text.cpp  Text.h  Viewport.cpp  Viewport.h
